src/Components/Weather/Weather.scss
.weather-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap:wrap;
    width: 100vw;
    height: 100%;
    background-color: #D0C3F0;
    background-image: linear-gradient(0deg, #f0c3f0 0%, #97D9E1 100%);
}

.current-weather-container, .three-day-weather-container, .seven-day-weather-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 100px 20px 100px 20px;
}

.current-weather, .three-day-weather, .seven-day-weather {
    display: flex;
    flex-wrap: wrap;
    width: 50%;
    height: auto;
    padding: 0px 0px 20px 0px;
    background-color: white;
}

.weather-title {
    width: 100%;
    background-color: rgba(100, 100, 100, 0.1);
    margin: auto auto 20px auto;
    padding: 20px 0px 10px 15px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.location, .temperature, .high-low {
    width: 100%;
    height: auto;
    padding-left: 15px;
    font-size: 2em;
}

.temperature {
    padding-top: 0px;
    font-size: 4em;
}

.high-low {
    font-weight: bold;
}

.weather-days {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    padding: 40px 20px 20px 20px;
}

.three-day {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding: 5px;
}

.vertical-divider {
    border-left: 1px solid #9b9b9b;
    border-right: 1px solid #9b9b9b;
    height: 100%;
}

.horizontal-divider {
    border-top: 1px solid #9b9b9b;
    width: 100%;
}

.seven-day-weather-list {
    display: flex;
    flex-wrap: wrap;
    padding: 2em;
    width: 100%;
}

.seven-day {
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding: 1em 2em 1em 1em;
}

.day-title {
    width: 100%;
    font-size: large;
    font-weight: bold;
}

.three-day-info {
    display: flex;
    justify-content: space-between;
    width: 70%;
    padding-top: 1em;
}

